# causal_precedence_training

./: Methodology.txt  README.md  setup.cfg
causal_precedence_training/: downloads.py  locations.py
scripts/: get_causality_dataset_for_signor_triples.py  get_selventa_transitivities.py  get_signor_causal_triples.py
src/causal_precedence_training/: downloads.py  locations.py  query_indra_db.py  reach_output.py
src/causal_precedence_training/resources/: __init__.py  selventa_large_corpus.tsv  selventa_small_corpus.tsv
src/causal_precedence_training/sources/: __init__.py  selventa.py
