##########################
# Setup.py Configuration #
##########################
[metadata]
name = causal_precedence_training
version = 0.0.1-dev
long_description = file: README.md

[options]
install_requires =
    dataclasses; python_version < "3.7"
    pickle5; python_version < "3.8"
    pystow
    boto3
    click
    more_click

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
